--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1464,8 +1464,8 @@ a .offer-box:last-child{
 .custom-checkbox > .box {
   position: relative;
   display: block;
-  width: 14px;
-  height: 14px;
+  width: 20px;
+  height: 20px;
   border: 1px solid #ccc;
   background-color: #eee;
   border-radius: 4px;
@@ -1474,16 +1474,17 @@ a .offer-box:last-child{
 .custom-checkbox > .box > .tick {
   position: absolute;
   left: 2px;
-  top: -2px;
+  top: 2px;
   width: 14px;
-  height: 6px;
-  border-bottom: 2px solid #333;
-  border-left: 2px solid #333;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  height: 8px;
+//  border-bottom: 4px solid #333;
+//  border-left: 4px solid #333;
+//  -webkit-transform: rotate(-45deg);
+//  -moz-transform: rotate(-45deg);
+//  -o-transform: rotate(-45deg);
+//  -ms-transform: rotate(-45deg);
+//  transform: rotate(-45deg);
+  background: image-url("tick_10.png") no-repeat;
   display: none;
 }
 
