change offer delete success message

--- a/app/views/offers/delete_offers.js.erb
+++ b/app/views/offers/delete_offers.js.erb
@@ -10,7 +10,7 @@ $(function () {
         $('.engage-campaign-delete-info').text('You can not delete already Engaged Campaign.');
     <% else @ids.present? %>
         $('.engage-campaign-delete-info').addClass('text-success');
-        $('.engage-campaign-delete-info').text('Selected campaigns has been deleted successfully.');
+        $('.engage-campaign-delete-info').text('Selected campaign/s has been deleted successfully.');
     <% end %>
 
 //    remove deleted offers
