add disclaimer about stats by location

--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -256,8 +256,16 @@
               return false;
           });
         </script>
+
+        <p class="text-muted">
+          <small>
+            <br/>
+            * These numbers are updated at certain intervals by Facebook and do not reflect the current statistics.
+          </small>
+        </p>
       </div>
     </div>
+
     <!-- /.box-header -->
   </div>
 </section>
