--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -96,7 +96,7 @@
 
             <div class="form-group">
               <div class="col-md-6">
-                <%= f.label :current_password, 'Old Password' %>
+                <%= f.label :current_password, 'Current Password' %>
                 <%= f.password_field :current_password, 'data-parsley-minlength'=> '6' %>
               </div>
               <div class="col-md-6">
@@ -113,7 +113,7 @@
                 <%= f.label :password_confirmation, 'Retype Password' %>
                 <%= f.password_field :password_confirmation, 'data-parsley-minlength'=> '6',
                                      'data-parsley-equalto'=> '#password_confirm',
-                                     'data-parsley-equalto-message' => 'Do not match with password field.' %>
+                                     'data-parsley-equalto-message' => 'Do not match with new password field.' %>
               </div>
             </div>
         <% end %>
