hide chart if there is no data  on going

--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -132,6 +132,7 @@
         // This will get the first returned node in the jQuery collection.
         var salesChart = new Chart(salesChartCanvas);
 
+        console.log('Chart data ' + <%= @account.gender_line_chart_data[:datasets].size %> );
         var salesChartData = {
             labels: <%= @account.gender_line_chart_data[:labels].to_json.html_safe %>,
             datasets: <%= @account.gender_line_chart_data[:datasets].to_json.html_safe %>
