--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -25,7 +25,7 @@
 <%#= render partial: 'shared/flash_messages', flash: flash %>
 <div class="welcome_bar">
   <div class="wrapper-content">
-    <div class="left">Good <%= (0..11).include?(Time.now.hour) ? 'morning' : 'afternoon'%>, <%= user_signed_in? ? current_user.full_name : 'Guest' %>!</div>
+    <div class="left">Good <%= extract_time(local_time(Time.now, '%P')) == 'am' ? 'morning' : 'afternoon'%>, <%= user_signed_in? ? current_user.full_name : 'Guest' %>!</div>
     <div class="right top_links">
       <p>
         <% if user_signed_in? %>
