hide all chart area if there is no data

--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -179,7 +179,7 @@
 
         // hive map if there is no data
       <% unless  @account.gender_line_chart_data[:datasets].present? %>
-            $('#salesChart').hide();
+            $('.chart-info').hide();
       <% end %>
     </script>
 
