--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -180,6 +180,7 @@
         // hive map if there is no data
       <% unless  @account.gender_line_chart_data[:datasets].present? %>
             $('.chart-info').hide();
+            $('.chart').hide();
       <% end %>
     </script>
 
