Brand > Campaign : Download Campaigns report drop down options design change

--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -19,12 +19,11 @@
       <button class="dropdown-toggle btn btn-download-campaign" data-toggle="dropdown">
         DOWNLOAD THIS CAMPAIGN'S REPORT
       </button>
-      <ul class="dropdown-menu pull-right" id="export_campaigns">
+      <ul class="dropdown-menu" id="export_campaigns">
         <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
         <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
         <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
       </ul>
-      </li>
     </div>
 
     <div class="row info-box-container">
