--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -943,3 +943,15 @@ only screen and (max-width: 560px) {
         font-size: 13px;
     }
 }
+
+#export_campaigns {
+    width: 90%;
+    margin-left: 5%;
+}
+
+@media
+only screen and (max-width: 560px) {
+    #export_campaigns {
+        width: 100%;
+    }
+}
