--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,12 @@
 <% title 'Password Reset' %>
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper password-reset-container">
-  <h2>Change your password</h2>
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''},html: {method: :put}) do |f| %>
+  <% if params[:invitation] %>
+      <h2>Thanks for being value able user for brand reach. </h2>
+      <h4>Please set your password</h4>
+<% else %>
+      <h2>Change your password</h2>
+<% end %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''}, html: {method: :put}) do |f| %>
       <%= devise_error_messages! %>
       <%= f.hidden_field :reset_password_token %>
 
