--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -7,7 +7,7 @@
     <%#= link_to 'EXPORT', '#', :class => 'btn btn-export button-border-yellow', id: 'export_campaigns' %>
     <button class="dropdown-toggle btn btn-export button-border-yellow" data-toggle="dropdown">
       EXPORT <span class="caret"></span></button>
-      <ul class="dropdown-menu" id="export_campaigns">
+      <ul class="dropdown-menu influencer-campaign-dropdown" id="export_campaigns">
         <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
         <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
         <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
