--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -61,7 +61,7 @@
           <div class="dropdown pull-right">
             <button class="dropdown-toggle btn btn-influencer-download pull-right" data-toggle="dropdown">
               DOWNLOAD INVOICE</button>
-            <ul class="dropdown-menu " id="export_campaigns">
+            <ul class="dropdown-menu influencer-payment-dropdown" id="export_campaigns">
               <li data-format="pdf" class="report-generate"><a href="#">to PDF</a></li>
               <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
               <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
