change payment and campaign checkbox with custom checkbox design

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1497,6 +1497,7 @@ a .offer-box:last-child{
   left: 0;
   top: 0;
   padding: 0;
+  cursor: pointer;
   width: 14px;
   height: 14px;
   border: none;
