--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -27,7 +27,12 @@
       <table class="table table-striped table-bordered table-responsive performance_table">
         <thead>
         <tr class="payment-header">
-          <th class="squaredFour" id="select_all_performance"><input type="checkbox" class="payment-header" value="all"/></th>
+          <th id="select_all_performance">
+            <span class="custom-checkbox">
+                <input type="checkbox" class="payment-header" value="all"/>
+                 <span class="box"><span class="tick"></span></span>
+            </span>
+          </th>
           <th>Campaign Name</th>
           <th>Post Likes</th>
           <th>Reach</th>
