--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -29,7 +29,12 @@
         <table class="table table-striped table-bordered table-responsive payments_table">
           <thead>
           <tr class="payment-header">
-            <th class="squaredFour" id="select_all_brand_payment"><input type="checkbox" class="payment-header" value="all"/></th>
+            <th id="select_all_brand_payment">
+                <span class="custom-checkbox">
+                                <input type="checkbox" value="all" class="payment-header" />
+                                    <span class="box"><span class="tick"></span></span>
+                </span>
+            </th>
             <th>Campaign Name</th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
@@ -43,10 +48,15 @@
               <tbody>
               <% @transactions.each do |transaction| %>
                   <tr>
-                    <td class="squaredFour"><input type="checkbox" class="BrandPaymentCheckBox" data-id="<%= transaction.id %>" value="1"/></td>
+                    <td>
+                      <span class="custom-checkbox">
+                        <input type="checkbox" value="1" class="BrandPaymentCheckBox" data-id="<%= transaction.id %>" />
+                            <span class="box"><span class="tick"></span></span>
+                      </span>
+                    </td>
                     <td><%= transaction.campaign.name %></td>
                     <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime('%B %d, %Y') : 'NA' %></td>
-                    <td><%= sprintf('BP%05d' ,transaction.id) %></td>
+                    <td><%= sprintf('BP%05d', transaction.id) %></td>
                     <td><%= transaction.amount_billed %></td>
                     <td>
                       <% if transaction.pending? %>
@@ -89,7 +99,7 @@
                 });
                 var format = $(this).data('format');
 
-                switch (format){
+                switch (format) {
                     case 'pdf':
                         window.open("<%= export_payments_path(format: :pdf) %>?payment_ids=" + payment_ids, '_blank')
                         break;
@@ -101,10 +111,11 @@
                         break;
                 }
             }
-            else
-            {
-                bootbox.alert({message: ' Please select at least one transaction.',
-                    closeButton: false});
+            else {
+                bootbox.alert({
+                    message: ' Please select at least one transaction.',
+                    closeButton: false
+                });
             }
 
         });
