--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -71,7 +71,12 @@
           <table class="table table-striped table-bordered table-responsive payments_table">
             <thead>
             <tr class="payment-header">
-              <th class="squaredFour" id="select_all_influencer_payment"><input type="checkbox" class="payment-header" value="all"/></th>
+              <th id="select_all_influencer_payment">
+                <span class="custom-checkbox">
+                            <input type="checkbox" value="all" class="payment-header" />
+                                <span class="box"><span class="tick"></span></span>
+                          </span>
+              </th>
               <th>Date Billed</th>
               <th>Transaction ID</th>
               <th>Amount Recieved (INR)</th>
@@ -83,7 +88,12 @@
                 <tbody>
                 <% @transactions.each do |transaction| %>
                     <tr>
-                      <td class="squaredFour"><input type="checkbox" class="InfluencerPaymentCheckBox" data-id="<%= transaction.id %>" value="1"/></td>
+                      <td>
+                          <span class="custom-checkbox">
+                            <input type="checkbox" value="1" class="InfluencerPaymentCheckBox" data-id="<%= transaction.id %>" />
+                                <span class="box"><span class="tick"></span></span>
+                          </span>
+                      </td>
                       <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime("%B %d, %Y") : 'NA' %></td>
                       <td><%= sprintf('BP%05d', transaction.id) %></td>
                       <td><%= transaction.amount_billed %></td>
