Brand > Campaign: Pdf  - Row background color changed

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1508,7 +1508,7 @@ a .offer-box:last-child{
 
 .custom-checkbox > input:active + .box {
   border-color: #aaa;
-  background-color: #737373;
+  background-color: #dddddd;
 }​
 
  .custom-checkbox.checked > .box > .tick {
