--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <% title 'Password Reset' %>
 
-<div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper password-reset-container">
+<div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper" id="password-reset-container">
   <h2>Forgot your password?</h2>
   <%= render partial: 'shared/flash_messages', flash: flash %>
 
