don't allow toggling checkbox if readonly
browser has bug where readonly still allows you to toggle it

--- a/app/views/shared/_add_account_modal.html.erb
+++ b/app/views/shared/_add_account_modal.html.erb
@@ -87,8 +87,13 @@
 
             $(document).on('click', '.js-clickable', function(event) {
                 var ip = $(this).find('input[type="checkbox"]');
-                if (ip.get(0) != event.target && !ip.is('[readonly]')) {
+                var targetIsIp = ip.get(0) == event.target;
+                var ipIsReadonly = ip.is('[readonly]');
+
+                if (!ipIsReadonly && !targetIsIp) {
                     ip.prop('checked', !ip.prop('checked'));
+                    return false;
+                } else if (ipIsReadonly && targetIsIp) {
                     return false;
                 }
             });
