Contact us sections submit button background color change

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1558,3 +1558,7 @@ a .offer-box:last-child{
   font-weight: 600;
   color: #0089db;
 }
+
+.contact-form .btn-submit:hover {
+  background-color: #00b6e2;
+}
