--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -829,12 +829,12 @@ only screen and (max-width: 480px) {
     }
 }
 
-.btn-export:hover, .btn-campaign-view:hover {
+.btn-export:hover, .btn-campaign-view:hover, .btn-export:focus, .btn-campaign-view:focus {
     color: white;
     background-color: #f1b242;
 }
 
-.btn-download-campaign:hover {
+.btn-download-campaign:hover, .btn-download-campaign:focus {
     color: white;
     background-color: #eb2e55;
 }
