--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1573,6 +1573,7 @@ a .offer-box:last-child{
   }
 
 }
-.contact-form .btn-submit:hover {
+
+.contact-form .btn-submit:hover, .contact-form .btn-submit:focus {
   background-color: #00b6e2;
 }
