sign in and sing up modal design with blue colored button and label

--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -33,8 +33,7 @@
           <input id="user_remember_me" type="checkbox" name="user[remember_me]" value="1">
           <label for="user_remember_me">Remember me</label>
         </div>
-        <button class="btn btn-modal-submit has-spinner" type="submit">
-          <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
+        <button class="br-btn-submit" type="submit">
           SUBMIT
         </button>
 
