--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -4,8 +4,10 @@
   <div class="modal-backdrop fade in"></div>
   <div class="modal-dialog modal-md modal-dialog-sign-up">
     <div class="modal-content">
-      <div class="modal-header close-image">
-        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
+      <div class="modal-header">
+        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button">
+          <i class="fa fa-times"></i>
+        </button>
         <h3 class="modal-title">Create an Account</h3>
       </div>
       <div class="modal-body model-iner">
@@ -63,8 +65,7 @@
                 <ul id="parsley-id-2000" class="parsley-errors-list"></ul>
               </div>
 
-              <button class="btn btn-modal-submit has-spinner" type="submit">
-                <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
+              <button class="br-btn-submit" type="submit">
                 SUBMIT
               </button>
             </form>
