--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -873,7 +873,7 @@ th {
 }
 
 .label_l {
-  background: #fbbb46 none repeat scroll 0 0;
+  background: #00c9f3 none repeat scroll 0 0;
   color: #fff;
   float: left;
   min-width: 120px;
@@ -1049,7 +1049,7 @@ textarea#company-short-bio{
   padding: 0 22px;
 }
 #faq .panel-body.expandable h4 {
-  color: #00c9f3;
+  color: #00b6e2;
   font-size: 15px;
   font-weight: bold;
 }
@@ -1559,6 +1559,20 @@ a .offer-box:last-child{
   color: #0089db;
 }
 
+.br-btn-submit {
+  background-color: #00c9f3;
+  border: medium none;
+  border-radius: 0;
+  color: #ffffff;
+  height: 36px;
+  width: 107px;
+  padding: 9px 10px;
+  margin-top: 14px;
+  &:hover {
+    background-color: #00b6e2;
+  }
+
+}
 .contact-form .btn-submit:hover {
   background-color: #00b6e2;
 }
