Counter up js saved in server instead of CDN

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -15,7 +15,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
 
   <%= csrf_meta_tags %>
 </head>
@@ -118,6 +117,9 @@
 
 </body>
 </html>
+
+<%= javascript_include_tag 'counterup.min', 'data-turbolinks-track' => true %>
+
 <script>
     $(function () {
 //        show sing in modal
@@ -165,8 +167,8 @@
 
         $(document).ready(function() {
             $('.count').counterUp({
-                delay: 10,
-                time: 4000
+                delay: 20,
+                time: 3000
             });
         });
 
