change password change page design for new button color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -973,7 +973,7 @@ th {
   text-decoration: none;
 }
 .global-modal .modal-header h3,#signin .modal-header h3, #signup .modal-header h3{
-  color: #ffb734;
+  color: #00c9f3;
   font-weight: 600;
 }
 
