--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,7 @@
 <% title 'Password Reset' %>
 
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper" id="password-reset-container">
+  <div class="display-inline-block password-reset-content">
   <h2>Forgot your password?</h2>
   <%= render partial: 'shared/flash_messages', flash: flash %>
 
@@ -14,7 +15,8 @@
       </div>
 
       <div class="actions">
-        <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+        <button class="br-btn-submit" type="submit">SUBMIT</button>
       </div>
   <% end %>
 </div>
+    </div>
