--- a/app/views/shared/_forgot_password.erb
+++ b/app/views/shared/_forgot_password.erb
@@ -1,8 +1,10 @@
 <div class="modal fade" id="forgotpassword">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
-      <div class="modal-header close-image">
-        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
+      <div class="modal-header">
+        <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button">
+          <i class="fa fa-times"></i>
+        </button>
         <h3 class="modal-title">Reset Password</h3>
       </div>
       <div class="modal-body model-iner">
@@ -20,7 +22,7 @@
                 <div class="label_l">Email</div>
                 <input data-parsley-id="4091" data-parsley-required="true" class="login_input" name="user[email]" id="user_email" type="text">
               </div>
-              <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+              <button class="br-btn-submit" type="submit">SUBMIT</button>
               <p class="forgot_pwd">&nbsp;</p>
             </form>
           </div>
