--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -24,7 +24,7 @@
         </div>
 
         <div class="actions">
-          <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+          <button class="br-btn-submit" type="submit">SUBMIT</button>
         </div>
     <% end %>
   </div>
