Homepage: Statistics counter changed to start from zero

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -166,10 +166,17 @@
 //        });
 
         $(document).ready(function() {
+
+            $('.numeric').each(function(){
+                var value = $(this).data("value");
+                $(this).text(value);
+            });
+
             $('.count').counterUp({
                 delay: 20,
                 time: 3000
             });
+
         });
 
 //        change greeting for local time
