--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -18,19 +18,19 @@
 
     <div class="text-top helvetica-neue-light"> Statistics</div>
     <div class="stats-block">
-      <span class="numeric color-brand count">10,000</span>
+      <span class="numeric color-brand count" data-value="10,000">0</span>
       <span class="textual"> BRANDS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-influencer count">25,000</span>
+      <span class="numeric color-influencer count" data-value="25,000">0</span>
       <span class="textual"> INFLUENCERS </span>
     </div>
     <div class="stats-block">
-      <span class="numeric color-campaign count">120,000</span>
+      <span class="numeric color-campaign count" data-value="120,000">0</span>
       <span class="textual"> CAMPAIGNS </span>
     </div>
     <div class="stats-block posts-padding">
-      <span class="numeric color-posts count">248,000</span>
+      <span class="numeric color-posts count" data-value="248,000">0</span>
       <span class="textual"> POSTS </span>
     </div>
   </div>
