solved Payments cart issues from trello - negative value is not withdraw able - change withdraw fail error message - hive sms setting from setting page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1577,3 +1577,7 @@ a .offer-box:last-child{
 .contact-form .btn-submit:hover, .contact-form .btn-submit:focus {
   background-color: #00b6e2;
 }
+
+#p-error-container-inf-payment{
+  padding-left: 154px;
+}
