--- a/app/views/profile/show_settings.html.erb
+++ b/app/views/profile/show_settings.html.erb
@@ -41,7 +41,7 @@
               </div>
             </div>
 
-            <div class="section2">
+            <div class="section2 hide">
               <label>SMS Reminders</label>
               <div class="onoffswitch">
                 <%= f.check_box :sms_remainder_active, class:'onoffswitch-checkbox', id: 'other-setting-section2-on-off-switch' %>
